--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ir.mrstudios.databasecloner.DatabaseCloner</mainClass>
+                                    <mainClass>ir.mrstudios.databasecloner.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -51,6 +51,18 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
             <version>5.1.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
